1999-02-25  Vincent Renardias  <vincent@debian.org>

	* Proof-read; many fixes, typo corrections, etc...
	* Put in comments the various 'FIXME' so they don't appear
	  in the output.
	* Random fixes/additions here&there.
	* Added a section on Apt.

1998-12-11  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Added half of PPP stuff from Ivan
	E. Moore, used some of the new DebianDoc tags, random minor
	things. Changed Makefile order to do postscript last since it's
	slow.

1998-11-04  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Little bit of stuff on dotfiles vs. system
	configuration.

1998-10-30  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Fixed up regular expressions section a
	little.

1998-10-29  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: A few minor fixes

1998-10-28  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Added I/O redirection, pipelines, aliases,
	functions to the shell chapter; some enhancements to the text
	editing chapter; some misc. typo fixes.

1998-10-18  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Ardo's markup fixes added.

1998-10-18  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Finished my edits, and added a lot of
	Thalia's. 	

1998-10-05  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Added a few more of my edits toward the
	end of the document; still a bunch of pending contributed edits.

1998-09-04  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Edits; couple sections on the shell.

1998-08-31  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Put in a bunch of edits.

1998-08-24  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Added initial vi section and a lame
	quickie on regular expressions, based on LDP guide. Entered more
	edits from the red-pen fest. Switched to LaTeX output.

1998-08-17  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: More edits.
