@@ -84,7 +84,7 @@
 	Debian, as there are other forums for that. See <ref
 	id="docs-support">.  Only send mail regarding the manual
 	itself to the above address.
-	  
+
       <p>To find the latest version of this manual, go to <url
 	    id="http://www.debian.org/doc/"
 	    name="http://www.debian.org/doc/"> and follow the links.
@@ -162,9 +162,10 @@
 
 	<sect1 id="introduction-debian-os">What's an operating system,
 	    and what sort of operating system is Debian?
-
-	  <p>An operating system is the set of basic programs and
-	    utilities that makes your computer run. 
+	    
+	  <p>An operating system is the collection of software that
+	    makes a computer usable. It manages hardware devices and
+	    provides utilities and applications.
 
 	  <p>Debian GNU/Linux is based on the Unix operating system,
 	    which has a long history (see <ref
@@ -993,6 +994,9 @@ man whoami
 		  <em>family</em> tree: thus subdirectories have
 		  "parents," and a path shows the complete ancestry of
 		  a file.
+
+		<p>There are also relative paths that begin somewhere
+		  other than the root directory. More on this later.
 
 	      <item> There's no directory that corresponds to a
 		  physical device, such as your hard disk. This
