@@ -1,3 +1,9 @@
+1999-03-15  Havoc Pennington  <hp@pobox.com>
+
+	* Makefile: Add DOS text target debtut.txt
+	* debian-tutorial.sgml: Couple of very minor changes that 
+	I never checked in months ago. 
+
 1999-02-25  Vincent Renardias  <vincent@debian.org>
 
 	* Proof-read; many fixes, typo corrections, etc...
